@@ -146,6 +146,8 @@ public class ColumnIdentifier extends Selectable implements IMeasurableMemory, C
 
     public static ColumnIdentifier getInterned(AbstractType<?> type, ByteBuffer bytes, String text)
     {
+        bytes = ByteBufferUtil.minimalBufferFor(bytes);
+
         InternedKey key = new InternedKey(type, bytes);
         ColumnIdentifier id = internedInstances.get(key);
         if (id != null)
